logs/lpthw.web.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lpthw.web-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/web'...
Compiling './lib/python3.5/site-packages/web/application.py'...
***   File "./lib/python3.5/site-packages/web/application.py", line 281
    except web.HTTPError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web/browser.py'...
***   File "./lib/python3.5/site-packages/web/browser.py", line 49
    print 'requesting', req.get_method(), req.get_full_url()
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/web/contrib'...
Compiling './lib/python3.5/site-packages/web/db.py'...
***   File "./lib/python3.5/site-packages/web/db.py", line 81
    raise UnknownParamstyle, paramstyle
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web/debugerror.py'...
***   File "./lib/python3.5/site-packages/web/debugerror.py", line 283
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web/form.py'...
***   File "./lib/python3.5/site-packages/web/form.py", line 93
    raise KeyError, i
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web/httpserver.py'...
***   File "./lib/python3.5/site-packages/web/httpserver.py", line 75
    except socket.error, socket_err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web/net.py'...
***   File "./lib/python3.5/site-packages/web/net.py", line 71
    raise ValueError, ':'.join(ip) + ' is not a valid IP address/port'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web/python23.py'...
***   File "./lib/python3.5/site-packages/web/python23.py", line 17
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web/session.py'...
***   File "./lib/python3.5/site-packages/web/session.py", line 228
    raise ValueError, "Bad key: %s" % repr(key)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web/template.py'...
***   File "./lib/python3.5/site-packages/web/template.py", line 467
    raise ParseError, 'Unknown statement: %s' % repr(keyword)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web/utils.py'...
***   File "./lib/python3.5/site-packages/web/utils.py", line 75
    except KeyError, k:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web/webapi.py'...
***   File "./lib/python3.5/site-packages/web/webapi.py", line 216
    raise ValueError, 'invalid characters in header'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/web/wsgiserver'...
Compiling './lib/python3.5/site-packages/web/wsgiserver/__init__.py'...
***   File "./lib/python3.5/site-packages/web/wsgiserver/__init__.py", line 616
    except ValueError, ex:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web/wsgiserver/ssl_builtin.py'...
***   File "./lib/python3.5/site-packages/web/wsgiserver/ssl_builtin.py", line 43
    except ssl.SSLError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/web/wsgiserver/ssl_pyopenssl.py'...
***   File "./lib/python3.5/site-packages/web/wsgiserver/ssl_pyopenssl.py", line 70
    except SSL.SysCallError, e:
                           ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
